--- a/blog/package.json
+++ b/blog/package.json
@@ -3,12 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@antv/g2": "^3.4.10",
     "antd": "^3.14.1",
     "braft-editor": "^2.2.9",
     "lodash": "^4.17.11",
     "mobx": "^5.9.0",
     "node-sass": "^4.11.0",
     "react": "^16.8.4",
+    "react-countup": "^4.1.1",
     "react-dom": "^16.8.4",
     "react-particles-js": "^2.4.2",
     "react-scripts": "2.1.5",
